# aoc2023

./: .gitignore  .pre-commit-config.yaml  README.md
python/: pyproject.toml
python/day01/: day1.py
python/day02/: day2-condensed.py  day2.py
python/day03/: day3.py
python/day04/: day4.py
python/day05/: day5.py
python/day06/: day6.py
python/day07/: day7.py
python/day08/: day8.py
