# testing - ruff config for projects (subject to change)
[tool.ruff]
line-length = 120
# E, W: pycodestyle (Error, Warn); F: Pyflakes; B: flake8-bugbear; PL: Pylint;
# RUF: ruff-specific; C4: flake8-comprehensions; A: flake8-builtins; D: pydocstyle;
# I: isort; UP: pyupgrade; PIE: flake8-pie
select = ["E", "W", "F", "B", "PL", "RUF", "C4", "A", "D", "I", "UP", "PIE"]
# https://beta.ruff.rs/docs/faq/#ruff-tried-to-fix-something-but-it-broke-my-code
unfixable = ["B", "SIM", "TRY"]  # avoid risky autofix

extend-ignore = ["D1", "UP015", "E741", "D211", "D213", "E501", "PLR2004"]
# Ignore:
# D1** - Missing docstring in ... (public module, class, __init__, etc.)
# UP015 - Unnecessary open mode parameters (open("file", "r"))
# E741 - Ambiguous variable name (e.g. 'l')
# https://beta.ruff.rs/docs/rules

[tool.black]
line-length = 120

[project]
name = "aoc2023"
version = "0.1.0"
description = "Advent of Code 2023, in Python."
authors = [
    {name = "sventec", email = "none@fake.email"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
